--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
                 <form role="search" action="/search" class="navbar-form navbar-right">
                     <input type="text" id="search-input" placeholder="Search" name="query"
                            class="form-control search-query">
-                    <label for="search-input" class="glyphicon glyphicon-search search-query-icon hidden"
+                    <label for="search-input" class="fa fa-search search-query-icon hidden"
                            aria-hidden="true"
                            href></label>
                 </form>
