--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -30,7 +30,7 @@ menu: Blog
         <a href="{{ post.url }}" class="list-group-item">
             {{ post.title }}
             <div class="pull-right hidden-xs">
-                <span class="glyphicon glyphicon-time "> </span>
+                <span class="fa fa-calendar"> </span>
                 {{ post.date | date: "%Y-%m-%d" }}
             </div>
         </a>
