--- a/_layouts/github.html
+++ b/_layouts/github.html
@@ -5,11 +5,11 @@
 {% include header.html %}
 {% include jumbotron.html %}
 <article class="container">
-    <ol class="breadcrumb">
-        <li><a href="/">Home</a></li>
-        <li><a href="/category/{{ page.category }}">{{ page.category }}</a></li>
-        <li class="active">{{ page.title }}</li>
-    </ol>
+    <!--<ol class="breadcrumb">-->
+        <!--<li><a href="/">Home</a></li>-->
+        <!--<li><a href="/category/{{ page.category }}">{{ page.category }}</a></li>-->
+        <!--<li class="active">{{ page.title }}</li>-->
+    <!--</ol>-->
 
     {{ content }}
 
