--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,11 @@ menu: Blog
 {% include jumbotron.html %}
 <article class="container">
     <div class="row">
-        <ol class="breadcrumb">
-            <li><a href="/">Home</a></li>
-            <li><a href="/category/{{ page.category }}">{{ page.category }}</a></li>
-            <li class="active">{{ page.title }}</li>
-        </ol>
+        <!--<ol class="breadcrumb">-->
+            <!--<li><a href="/">Home</a></li>-->
+            <!--<li><a href="/category/{{ page.category }}">{{ page.category }}</a></li>-->
+            <!--<li class="active">{{ page.title }}</li>-->
+        <!--</ol>-->
         <div class="col-md-8 markdown-body">
 
             {{ content }}
