--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,24 +1,25 @@
 <section class="jumbotron geopattern" data-pattern-id="{{ page.title }}">
     <div class="container">
         <h3>{{ page.title }}</h3>
-            <span class="meta-info">
-                {% if page.subtitle %}
-                    {{ page.subtitle }}
-                {% endif %}
-                {% if page.date %}
-                <span class="glyphicon glyphicon-time"></span> {{ page.date | date: "%Y/%m/%d" }}
-                {% endif %}
-                {% if page.category %} |
-                 Posted in <a href="/category/{{ page.category }}">{{ page.category }}</a>
-                {% endif %}
-                {% if page.tags %} with
-                 <span class="glyphicon glyphicon-tag small"></span>
-                {% for tag in page.tags %}
-                  <a href="/tag/{{ tag | slugify }}" class="post-tag">
-                      {{ tag }}
-                  </a>
-                {% endfor %}
-                {% endif %}
-            </span>
+        <div class="meta-info">
+            {% if page.subtitle %}
+            {{ page.subtitle }}
+            {% endif %}
+            {% if page.date %}
+            <span class="fa fa-calendar"></span>  {{ page.date | date: "%Y/%m/%d" }}
+            {% endif %}
+            {% if page.category %}
+            <span class="fa fa-archive"></span>
+            <a href="/category/{{ page.category }}">  {{ page.category }}</a>
+            {% endif %}
+            {% if page.tags %}
+            <span class="fa fa-tags"></span>
+            {% for tag in page.tags %}
+            <a href="/tag/{{ tag | slugify }}" class="post-tag">
+                 {{ tag }}
+            </a>
+            {% endfor %}
+            {% endif %}
+        </div>
     </div>
 </section>
