--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -29,7 +29,7 @@ menu: Tags
         <a href="{{ post.url }}" class="list-group-item">
             {{ post.title }}
             <div class="pull-right hidden-xs">
-                <span class="glyphicon glyphicon-time "> </span>
+                <span class="fa fa-calendar"> </span>
                 {{ post.date | date: "%Y-%m-%d" }}
             </div>
         </a>
