update github layout

--- a/_includes/github-head.html
+++ b/_includes/github-head.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
 
     <link type="text/css" rel="stylesheet" href="{{site.url}}/resources/syntax/shCoreDefault.css"/>
-    <link rel="stylesheet" type="text/css" href="{{site.url}}/resources/css/github-example.css">
+    <!--<link rel="stylesheet" type="text/css" href="{{site.url}}/resources/css/github-example.css">-->
     <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/common.css">
 
