update layout and style

--- a/_includes/github-dir-sidebar.html
+++ b/_includes/github-dir-sidebar.html
@@ -1,5 +1,5 @@
 <section id="directory-module" class="directory-module hidden-xs">
-    <h3>Directory</h3>
+    <h3><i class="fa fa-bars fa-fw" aria-hidden="true"></i> Directory</h3>
     <dl>
     </dl>
 </section>
