--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,19 +4,19 @@
         <ul class="nav nav-pills">
             <li role="presentation">
                 <a href="/">
-                    <span class="fa fa-home"></span> {{ site.name }}
+                    <span class="fa fa-copyright fa-fw"></span>2016 TT-CC
                 </a>
             </li>
             <li role="presentation">
                 <a href="/about">
-                    <span class="fa fa-user"></span> About Me
+                    <span class="fa fa-user fa-fw"></span> About Me
                 </a>
             </li>
             <li role="presentation"><a href="/sitemap.xml">
-                <span class="fa fa-sitemap"></span> Sitemap</a>
+                <span class="fa fa-sitemap fa-fw"></span> Sitemap</a>
             </li>
             <li role="presentation" class="pull-right">
-                <a href="javascript:$('body').animate({scrollTop: 0}, 200);">
+                <a href="javascript:$('body').animate({scrollTop: 0}, 400);">
                     <span class="fa fa-arrow-up"></span>
                 </a>
             </li>
@@ -29,4 +29,6 @@
 {% for javascript in page.js %}
 <script src="/assets/js/{{javascript}}"></script>
 {% endfor %}
+{% if site.easydebug == "true" %}
 {% include google-analytic.html %}
+{% endif %}
