--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
     {% feed_meta %}
 
-    <script type="text/javascript" src="/components/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/components/jquery/jquery-1.12.4.min.js"></script>
 
     <!-- Third-Party CSS -->
     <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
