--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -28,9 +28,9 @@ menu: Blog
         {% endif %}
         {% endunless %}
         <a href="{{ post.url }}" class="list-group-item">
-            {{ post.title }}
+            <i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> {{ post.title }}
             <div class="pull-right hidden-xs">
-                <span class="fa fa-calendar"> </span>
+                <span class="fa fa-calendar fa-fw"> </span>
                 {{ post.date | date: "%Y-%m-%d" }}
             </div>
         </a>
@@ -39,14 +39,15 @@ menu: Blog
     {% endif %}
     {% endfor %}
     {% else %}
-    <p>There are no posts in this category.</p>
+    <p><i class="fa fa-meh-o fa-fw" aria-hidden="true"></i> There are no posts in this category.</p>
     {% endif %}
 </div>
 <div class="col-md-4">
     <div class="btn-label">
-        <h3> Categories Cloud</h3>
+        <div class="paper-title">Categories Cloud</div>
         {% for category in site.my_categories %}
-        <a href="/category/{{category.slug}}" class="btn btn-default">{{ category.slug }}</a>
+        <a href="/categories/{{category.slug}}" class="btn btn-default">{{ category.slug
+            }}({{site.categories[category.slug].size|default:0}})</a>
         {% endfor %}
     </div>
 </div>
