--- a/_includes/github-dir-sidebar.html
+++ b/_includes/github-dir-sidebar.html
@@ -1,3 +1,8 @@
+<div class="paper-title">
+    <a href="{{ site.github_url }}/{{ page.github }}">
+        <i class="fa fa-code-fork fa-fw" aria-hidden="true"></i>Fork On Github
+    </a>
+</div>
 <section id="directory-module" class="directory-module hidden-xs">
     <h3><i class="fa fa-bars fa-fw" aria-hidden="true"></i> Directory</h3>
     <dl>
