--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,20 +15,20 @@
 
     <script type="text/javascript" src="/components/jquery/jquery-1.12.4.min.js"></script>
 
-    <!-- Third-Party CSS -->
     <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
 
-    <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/common.css">
-
-    <!-- CSS set in page -->
     {% for css in page.css %}
     <link rel="stylesheet" href="/assets/css/{{css}}">
     {% endfor %}
-
-    <!-- CSS set in layout -->
     {% for css in layout.css %}
     <link rel="stylesheet" href="/assets/css/{{css}}">
+    {% endfor %}
+    {% for css in page.romotecss %}
+    <link rel="stylesheet" href="{{site.url}}{{css}}">
+    {% endfor %}
+    {% for javascript in page.romotejs %}
+    <script src="{{site.url}}{{javascript}}"></script>
     {% endfor %}
 </head>
