--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -10,12 +10,12 @@
             {% endif %}
             {% if page.category %}
             <span class="fa fa-archive fa-fw"></span>
-            <a href="/category/{{ page.category }}">  {{ page.category }}</a>
+            <a href="/categories/{{ page.category }}">  {{ page.category }}</a>
             {% endif %}
             {% if page.tags %}
             <span class="fa fa-tags fa-fw"></span>
             {% for tag in page.tags %}
-            <a href="/tag/{{ tag | slugify }}" class="post-tag">
+            <a href="/tags/{{ tag | slugify }}" class="post-tag">
                  {{ tag }}
             </a>
             {% endfor %}
