--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,31 +2,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
     <title>{% if page.title %}{{ page.title | escape }} | {{ site.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
-    <meta name="description"
-          content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+<!--    <meta name="description"
+          content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"> -->
     {% seo title=false %}
-
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="bookmark" href="/favicon.ico">
     {% feed_meta %}
-
-    <script type="text/javascript" src="/components/jquery/jquery-1.12.4.min.js"></script>
-
     <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="/assets/css/common.css">
     {% for css in page.css %}
     <link rel="stylesheet" href="/assets/css/{{css}}">
     {% endfor %}
-    {% for css in layout.css %}
-    <link rel="stylesheet" href="/assets/css/{{css}}">
-    {% endfor %}
     {% for css in page.romotecss %}
     <link rel="stylesheet" href="{{site.url}}{{css}}">
+    {% endfor %}
+	<script type="text/javascript" src="/components/jquery/jquery-1.12.4.min.js"></script>
+	{% for javascript in page.js %}
+    <script src="/assets/js/{{javascript}}"></script>
     {% endfor %}
     {% for javascript in page.romotejs %}
     <script src="{{site.url}}{{javascript}}"></script>
