change list icon

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -27,7 +27,7 @@ menu: Tags
         {% endif %}
         {% endunless %}
         <a href="{{ post.url }}" class="list-group-item">
-            <i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> {{ post.title }}
+            <i class="fa fa-hand-o-right fa-fw" aria-hidden="true"></i> {{ post.title }}
             <div class="pull-right hidden-xs">
                 <span class="fa fa-calendar fa-fw"> </span>
                 {{ post.date | date: "%Y-%m-%d" }}
