--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,9 @@ menu: Blog
             <hr/>
             <div>
                 <h3>Related Posts</h3>
-                <ul>
+                <ul class="fa-ul">
                     {% for related_post in site.related_posts limit: 5 %}
-                    <li><a href="{{ related_post.url }}">{{ related_post.title }}</a></li>
+                    <li><i class="fa-li fa fa-hand-o-right"></i> <a href="{{ related_post.url }}">{{ related_post.title }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
