--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -96,6 +96,7 @@ img {
     padding: 15px 0 20px 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+	background: #337ab7;
 }
 
 .thumbnail-card .caption {
