--- a/_includes/sidebar-post-tag.html
+++ b/_includes/sidebar-post-tag.html
@@ -3,7 +3,7 @@
         <i class="fa fa-tags fa-fw" aria-hidden="true"></i> Tags
     </a>
     {% for tag in site.tags %}
-    <a class="list-group-item" href="/tags/{{ tag | first }}">
+    <a class="list-group-item" href="/tag/{{ tag | first }}">
         {{ tag | first }}
         <span class="badge pull-right">{{ tag[1].size }}</span>
     </a>
