--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,7 +5,7 @@ menu: Blog
 <div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
-        <li><a href="/categories">categories</a></li>
+        <li><a href="/category">categories</a></li>
         <li class="active">{{ page.title }}</li>
     </ol>
     {% if site.categories[page.slug] %}
@@ -46,7 +46,7 @@ menu: Blog
     <div class="btn-label">
         <div class="paper-title">Categories Cloud</div>
         {% for category in site.my_categories %}
-        <a href="/categories/{{category.slug}}" class="btn btn-default">{{ category.slug
+        <a href="/category/{{category.slug}}" class="btn btn-default">{{ category.slug
             }}({{site.categories[category.slug].size|default:0}})</a>
         {% endfor %}
     </div>
