--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,34 +1,42 @@
 <section id="share-comment">
     <br/>
-    <!-- JiaThis Button BEGIN -->
+
     <div class="jiathis_style">
-        <span class="jiathis_txt">分享到：</span>
-        <a class="jiathis_button_weixin">微信</a>
-        <a class="jiathis_button_tsina">新浪微博</a>
-        <a class="jiathis_button_qzone">QQ空间</a>
-        <a class="jiathis_button_cqq">QQ好友</a>
+        <span>分享到：</span>
+        <a href="javascript:void(0);"><i class="fa fa-weixin fa-fw"></i> 微信</a>
+        <a href="javascript:shareTSina('{{page.title}}', '');"><i class="fa fa-weibo fa-fw"></i> 新浪微博</a>
+        <a href="javascript:shareQzone('{{site.title}}', '{{page.title}}');"><i class="fa fa-qq fa-fw"></i> QQ空间</a>
+        <a href="javascript:void(0);"><i class="fa fa-qq fa-fw"></i> QQ好友</a>
     </div>
-    <!-- JiaThis Button END -->
     <br/>
     <br/>
+
     <div id="disqus_thread"></div>
     <script>
-        var jiathis_config = {
-            summary: "",
-            shortUrl: false,
-            hideMore: false
-        }, disqus_config = function () {
+        var top = window.screen.height / 2 - 250;
+        var left = window.screen.width / 2 - 300;
+        /*title是标题，rLink链接，summary内容，site分享来源，pic分享图片路径,分享到新浪微博*/
+        function shareTSina(title, pic) {
+            window.open("http://service.weibo.com/share/share.php?pic=" + encodeURIComponent(pic) + "&title=" +
+                    encodeURIComponent(title.replace(/&nbsp;/g, " ").replace(/<br \/>/g, " ")) + "&url=" + encodeURIComponent(location.href),
+                    "分享至新浪微博", "height=500,width=600,top=" + top + ",left=" + left + ",toolbar=no,menubar=no,scrollbars=no, resizable=no,location=no, status=no");
+        }
+        /*,分享到qq空间*/
+        function shareQzone(title, summary) {
+            window.open('http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?title=' +
+                    encodeURIComponent(title) + '&url=' + encodeURIComponent(location.href) + '&summary=' +
+                    encodeURIComponent(summary) + '&site=' + encodeURIComponent(location.host)
+                    , 'scrollbars=no,width=600,height=450,left=' + left + ',top=' + top + ',status=no,resizable=yes');
+        }
+        var disqus_config = function () {
             this.page.url = location.href; // Replace PAGE_URL with your page's canonical URL variable
             this.page.identifier = location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         $(function () {
-            var d = document, share = d.createElement('script'), dis = d.createElement('script');
-            // add jiathis
-            share.src = '//v3.jiathis.com/code/jia.js';
-            // add disqus
-            dis.src = '//tt-cc.disqus.com/embed.js';
+            var d = document, dis = d.createElement('script');
+            dis.src = '//{{site.disque}}/embed.js';
             dis.setAttribute('data-timestamp', new Date());
-            (d.head || d.body).appendChild(share).appendChild(dis);
+            (d.head || d.body).appendChild(dis);
             $("#share-comment").show();
         });
     </script>
