--- a/_layouts/github-plugins.html
+++ b/_layouts/github-plugins.html
@@ -3,7 +3,7 @@
 {% include github-head.html %}
 <body>
 {% include header.html %}
-{% include jumbotron.html %}
+{% include jumbotron-post.html %}
 <article class="container">
     <div class="row">
         <div class="col-md-9" id="github-main">
