--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 menu: Blog
 ---
-{% include jumbotron.html %}
+{% include jumbotron-post.html %}
 <article class="container">
     <div class="row">
         <!--<ol class="breadcrumb">-->
