update open-source card style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/pattern.css">
     {% for css in page.css %}
     <link rel="stylesheet" href="/assets/css/{{css}}">
     {% endfor %}
