--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -107,22 +107,26 @@ img {
 
 .thumbnail-card {
     padding: 0;
+    height: 180px;
+    position: relative;
 }
 
 .thumbnail-card .card-img {
     padding: 15px 0 20px 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    background: #337ab7;
+    /*background: #337ab7;*/
 }
 
-.thumbnail-card .caption {
-    height: 88px;
+.thumbnail-card .card-body {
+    margin: 10px;
+    vertical-align: middle;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+    height: 40px;
 }
 
 .thumbnail-card a {
@@ -145,7 +149,8 @@ img {
 /*background-size: contain;*/
 /*}*/
 
-.hvr-underline-from-center {
+/* bottom-border animate */
+.tc-underline-from-center {
     display: inline-block;
     vertical-align: middle;
     -webkit-transform: translateZ(0);
@@ -157,12 +162,12 @@ img {
     overflow: hidden;
 }
 
-.hvr-underline-from-center:hover:before {
+.tc-underline-from-center:hover:before {
     left: 0;
     right: 0;
 }
 
-.hvr-underline-from-center:before {
+.tc-underline-from-center:before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -177,4 +182,46 @@ img {
     transition-duration: .3s;
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
+}
+
+/* toolltip animate */
+.tc-toolltip {
+    position: relative;
+}
+
+.tc-toolltip .tooltip-t {
+    width: 100px;
+    padding: 4px;
+    left: 50%;
+    margin-left: -50px;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    border: 4px solid #fff;
+    background: black;
+    border-radius: 8px;
+    position: absolute;
+    pointer-events: none;
+    bottom: 60px;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.tc-toolltip .tooltip-t:before {
+    content: '';
+    position: absolute;
+    bottom: -6px;
+    left: 50%;
+    margin-left: -9px;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid black;
+}
+
+.tc-toolltip:hover .tooltip-t {
+    opacity: 0.9;
+    bottom: 20px;
 }
